fix: include z-index for font-settings tooltip && remove styling for last child

--- a/dev/style.scss
+++ b/dev/style.scss
@@ -36,6 +36,10 @@
   --grid-column: 74px;
 }
 
+@mixin tooltip {
+  z-index: 5000;
+}
+
 @mixin grid-margin {
   margin: {
     left: var(--grid-margin);
@@ -173,6 +177,7 @@ h6 {
 
 #font-settings {
   @include grid-margin;
+  @include tooltip;
   background-color: var(--ink-blue);
   padding: var(--reg-font-size);
   border-radius: var(--reg-font-size);
@@ -196,9 +201,9 @@ h6 {
       padding-top: 100%;
     }
 
-    &:last-child::before {
-      padding-top: calc(22.5%);
-    }
+    // &:last-child::before {
+    //   padding-top: calc(22.5%);
+    // }
 
     button,
     select {
